Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
     {
      "data": {
       "text/plain": [
-       "{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59}"
+       "{'City': 'Toronto', 'Country': 'Canada', 'Population': 630, 'Area': 2731571}"
       ]
      },
      "execution_count": 4,
@@ -286,7 +286,7 @@
     }
    ],
    "source": [
-    "cities[0]"
+    "cities[10]"
    ]
   },
   {
