Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -271,22 +271,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Toronto', 'Country': 'Canada', 'Population': 630, 'Area': 2731571}"
+       "{'City': 'Pyeongchang',\n",
+       " 'Country': 'South Korea',\n",
+       " 'Population': 2581000,\n",
+       " 'Area': 3194}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[10]"
+    "cities[11]"
    ]
   },
   {
